Implemented Cart.tsx and Checkout.tsx. Created empty OrderDetails.tsx and UserOrders.tsx for future use. Organized files into separate folders.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,5 +25,5 @@
     "noUncheckedSideEffectImports": true,
     "forceConsistentCasingInFileNames": false
   },
-  "include": ["src"]
+  "include": ["src", "public/App.tsx"]
 }
