Migration to React Query for app architecture simplification. Removed the need to use Custom Hooks and simplified state management using React Query to handle server state and Zustand to reduce code usage by handling client/UI state. Setup firebase for cloud messaging and notifications in app to notify users. Overall performance increase.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,31 @@ dist-ssr
 .env
 .env.local
 .env.*.local
+.env.development
+.env.production
+
+# Firebase Admin SDK Private Keys 
+**/serviceAccountKey.json
+**/service-account-key.json
+**/*-firebase-adminsdk-*.json
+
+# Firebase emulator data and cache
+.firebase/
+**/firebase-debug.log
+**/firebase-debug.*.log
+**/.firebase/
+**/database-debug.log
+**/firestore-debug.log
+**/pubsub-debug.log
+**/ui-debug.log
+
+# Cloud Functions
+cloudfunctions/lib/
+cloudfunctions/node_modules/
+cloudfunctions/.runtimeconfig.json
+functions/lib/
+functions/node_modules/
+functions/.runtimeconfig.json
 
 # Editor directories and files
 .vscode/*
