--- a/.env.local.example
+++ b/.env.local.example
@@ -10,6 +10,11 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
+# Firebase Cloud Messaging VAPID Key
+# Get this from Firebase Console > Project Settings > Cloud Messaging > Web Push certificates
+# Click "Generate key pair" if you don't have one
+VITE_FIREBASE_VAPID_KEY=your_vapid_key_here
+
 # Instructions:
 # 1. Go to https://console.firebase.google.com/
 # 2. Create a new project called "campus-nightmarket"
