Removed exposed Firebase credentials and utilized vite to inject local values at build time. Created logger utility to replace console logs across the app. Implemented rate limiting to prevent users from abusing sign ups or creating unlimited orders. Fixed order placement issues. Added more input validations. Implemented sentry error tracking and seller email verification. Optimized and refactor code base. Fixed errors with building.

--- a/.env.local.example
+++ b/.env.local.example
@@ -15,6 +15,11 @@ VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
 # Click "Generate key pair" if you don't have one
 VITE_FIREBASE_VAPID_KEY=your_vapid_key_here
 
+# Sentry Error Tracking (Optional - for production error monitoring)
+# Get this from https://sentry.io/ after creating a project
+# Leave empty to disable Sentry
+VITE_SENTRY_DSN=
+
 # Instructions:
 # 1. Go to https://console.firebase.google.com/
 # 2. Create a new project called "campus-nightmarket"
