--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:auth": "jest tests/integration/auth.integration.test.ts",
+    "test:orders": "jest tests/integration/orders.integration.test.ts",
+    "test:listings": "jest tests/integration/listings.integration.test.ts",
+    "test:security": "jest tests/integration/security-rules.test.ts",
+    "emulators:start": "firebase emulators:start",
+    "test:emulators": "firebase emulators:exec \"npm test\""
   },
   "dependencies": {
     "@sentry/react": "^10.27.0",
@@ -24,6 +33,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@firebase/rules-unit-testing": "^3.0.4",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.11",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
@@ -33,8 +47,18 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^7.2.2"
+  },
+  "overrides": {
+    "@firebase/rules-unit-testing": {
+      "firebase": "$firebase"
+    }
   }
 }
