--- a/.env.local.example
+++ b/.env.local.example
@@ -10,6 +10,16 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
+# Instructions:
+# 1. Go to https://console.firebase.google.com/
+# 2. Create a new project called "your-project"
+# 3. Enable Authentication (Email/Password provider)
+# 4. Create Firestore Database (start in test mode)
+# 5. Enable Storage
+# 6. Go to Project Settings > General > Your apps
+# 7. Add a Web app (</>) and copy the config values here
+# 8. Rename this file to .env.local
+
 # Firebase Cloud Messaging VAPID Key
 # Get this from Firebase Console > Project Settings > Cloud Messaging > Web Push certificates
 # Click "Generate key pair" if you don't have one
@@ -18,14 +28,15 @@ VITE_FIREBASE_VAPID_KEY=your_vapid_key_here
 # Sentry Error Tracking (Optional - for production error monitoring)
 # Get this from https://sentry.io/ after creating a project
 # Leave empty to disable Sentry
-VITE_SENTRY_DSN=
+VITE_SENTRY_DSN=your_sentry_dsn_here
 
-# Instructions:
-# 1. Go to https://console.firebase.google.com/
-# 2. Create a new project called "campus-nightmarket"
-# 3. Enable Authentication (Email/Password provider)
-# 4. Create Firestore Database (start in test mode)
-# 5. Enable Storage
-# 6. Go to Project Settings > General > Your apps
-# 7. Add a Web app (</>) and copy the config values here
-# 8. Rename this file to .env.local
+# Firebase App Check - ReCaptcha V3 Site Key
+# Get this from https://www.google.com/recaptcha/admin
+# Create a ReCaptcha v3 site key and add your domain
+# See docs/APP_CHECK_SETUP.md for detailed setup instructions
+VITE_RECAPTCHA_SITE_KEY=your_recaptcha_site_key_here
+
+
+# For development only - get debug token from Firebase Console > App Check
+# Leave empty for production
+VITE_APP_CHECK_DEBUG_TOKEN=your_debug_token_here
