--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^7.0.0"
   },
