Consolidation for codebase files. Fixed import errors. Renamed files for consistency. Deleted unused folders and files. Organized files.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,5 +23,5 @@
     "noUncheckedSideEffectImports": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src", "public/App.tsx"]
+  "include": ["src"]
 }
