--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,11 @@
 {
   "semi": true,
-  "singleQuote": true,
-  "tabWidth": 2,
   "trailingComma": "es5",
+  "singleQuote": true,
   "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
   "arrowParens": "always",
-  "endOfLine": "lf",
-  "bracketSpacing": true,
-  "jsxSingleQuote": false,
-  "jsxBracketSameLine": false
+  "endOfLine": "auto",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
