--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,5 @@
     "forceConsistentCasingInFileNames": true
   },
   "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }]
 }
