Fixed sellerListing update issues with editlisting. Added real-time updates to fetch listing status in Browse.tsx and SellerListings.tsx and EditListing.tsx. Fixed mode switch in UserOrder.tsx. Minor issues fixed.

--- a/.hintrc
+++ b/.hintrc
@@ -4,5 +4,14 @@
   ],
   "hints": {
     "axe/aria": "off"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not and_ff <= 143",
+    "not firefox <= 144",
+    "not opera <= 122",
+    "not ios_saf <= 26",
+    "not safari <= 26"
+  ]
 }
