--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "globals": "^16.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jest-environment-node": "^29.7.0",
     "prettier": "^3.7.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
