Add email verification functionality and enhance UI components.

--- a/.env.local.example
+++ b/.env.local.example
@@ -10,6 +10,10 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
+# Optional: force verification email redirect to a whitelisted domain (use your hosted URL)
+# Example: https://campus-night-market.firebaseapp.com
+VITE_VERIFICATION_REDIRECT_URL=
+
 # Instructions:
 # 1. Go to https://console.firebase.google.com/
 # 2. Create a new project called "your-project"
