--- a/.env.local.example
+++ b/.env.local.example
@@ -10,8 +10,9 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
-# Optional: force verification email redirect to a whitelisted domain (use your hosted URL)
-# Example: https://campus-night-market.firebaseapp.com
+# Optional: force verification email redirect to a whitelisted domain (use your hosted URL in prod)
+# Example: https://campus-nightmarket.vercel.app
+# For local testing, you can leave this empty and the app will use http://localhost:5173 automatically
 VITE_VERIFICATION_REDIRECT_URL=
 
 # Instructions:
