--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prepare": "simple-git-hooks"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npm run lint && npm test && npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -59,6 +63,7 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "simple-git-hooks": "^2.11.1"
   }
 }
