--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,11 +27,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
+      - name: Seller guard check
+        run: npm test -- --runTestsByPath tests/security/sellerRoutes.guard.test.tsx
 
-      - name: Run tests with Firebase Emulators
-        run: firebase emulators:exec "npm test"
+      - name: Run tests
+        run: npm test
 
       - name: Generate coverage report
         run: npm run test:coverage
