--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query-devtools": "^5.91.1",
     "@tanstack/react-virtual": "^3.13.12",
     "firebase": "^12.6.0",
+    "firebase-functions": "^7.0.1",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -59,11 +60,11 @@
     "jest-environment-node": "^29.7.0",
     "prettier": "^3.7.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "simple-git-hooks": "^2.11.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
-    "vite": "^7.2.4",
-    "simple-git-hooks": "^2.11.1"
+    "vite": "^7.2.4"
   }
 }
