--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.67.0",
     "react-router-dom": "^7.9.6",
     "sonner": "^2.0.7",
@@ -65,6 +66,7 @@
     "jest-environment-node": "^29.7.0",
     "prettier": "^3.7.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "sharp": "^0.34.5",
     "simple-git-hooks": "^2.11.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
